practiced multiple html attributes

--- a/HTML/format.html
+++ b/HTML/format.html
@@ -5,7 +5,11 @@
             My name is sathish kumar.
         </i>
     <b>I am from Hyderabad.</b>
-
+    <strong>I am sitting on a chair.</strong>
+    <ins>I am listening to class.</ins>
+    <del>sathish kumar</del>
+    <sub>paguthota</sub>
+    <sup>kumar</sup>
 </body>
 
 </html>
